samples/_failures_safe/1761347596_aafc95_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1dcca687.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_1dcca687.c:178:9: error: expected declaration or statement at end of input
  178 |         case TOKEN_STRING: return "STRING";
      |         ^~~~
./samples/SAFE/__tmp_1dcca687.c:178:9: error: expected declaration or statement at end of input
